--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Arivali_Excel</string>
+    <string name="app_name">Arivali</string>
     <string name="login_here">Login Here</string>
     <string name="enter_email">enter email</string>
     <string name="enter_password">enter password</string>
